# meshell

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  makefile  meshell  mishell.rc
include/: exec.h  meshellcfg.h  parser.h  utils.h
include/custom_math/: CMakeLists.txt  Makefile  cmake_install.cmake  constants.c  constants.h  operations.c  operations.h
src/: exec.c  main.c  meshellcfg.c  parser.c  utils.c
